# gst-plugins-learning

./: Cargo.toml
gst-plugin-01-dummy-element/: Cargo.toml
gst-plugin-01-dummy-element/src/: lib.rs
gst-plugin-02-dummy-src/: Cargo.toml  experiment.rs
gst-plugin-02-dummy-src/src/: lib.rs
src/: experiment.rs
